# snapkin

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  snapkin.py
snapkin/: snapkin.py
src/snapkin/: __init__.py
