[tool.poetry]
name = "snapkin"
version = "0.1.0"
description = "snapshot cleanup tool"
authors = ["JJ Quisenberry <johnny.e.quisenberry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.19"
bumpversion = "^0.6.0"

[tool.poetry.scripts]
snapkin = "snapkin.snapkin:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
